--- a/dev/index.html
+++ b/dev/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <section class="section-1 section">
-        <h1 class="sec1-title">Tour around the world <br />with the new destination</h1>
+        <h1 class="sec1-title">Tour around the<br/> world with the new destination</h1>
         <p class="sec1-text text">
           We believe in a traveling experience by providing our tour <br />plan
           that suits your the best!
